releases/3.0.0/Changelog.md
## Introduction

This document describes the (major) changes to [the current version 2.2.1](https://github.com/catalogue-of-services-isa/CPSV-AP/tree/master/releases/2.2.1) of CPSV-AP for which a new version is being proposed ([version 3.0.0](https://catalogue-of-services-isa.github.io/CPSV-AP/releases/3.0.0/index_en.html)). The list of changes results in the new version to be considered as a major release.


| Nr  | CPSV-AP 2.2.1                                                     | CPSV-AP 3.0                                                                                                                | Rationale                                                                                                                  | Github issue                                                         |
| --- | ----------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
| P1  |                                                                   | Recommendation of controlled vocabularies in the usage notes of the Public Service class (sector, functions of government) |                                                                                                                            | [5](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/5)   |
| P2  |                                                                   | Recommendation of controlled vocabularies in the usage notes of the Public Service class (spatial)                         |                                                                                                                            | [11](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/11) |
| P3  | Lack of consistency in the order of optional/mandatory properties | Mandatory properties have been moved before optionals                                                                      | For end user it is more easy to read/search properties in alphabetical order                                               | [33](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/33) |
| R1  | \                                                                 | dct:hasPart added as a relation between Public Service and Dataset                                                         | The direct link from Dataset to Public Service is needed when the starting point of the serialization is a Dataset         | [35](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/35) |
| C1  | dct:agent                                                         | foaf:agent                                                                                                                 | For interoperability with Core Vocabularies                                                                                | [36](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/36) |
| C2  | class CriterionRequirement                                        | class cv:Requirement                                                                                                       | For interoperabilty with CCCEV 2.0                                                                                         | [37](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/37) |
|     | \                                                                 | License added                                                                                                              | Explicit license reuse in the RDF Schema allow end users and information systems to better interpret the rights on CPSV-AP | [38](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/38) |
| P4  | dct:status                                                        | adms:status                                                                                                                | Inconsistency with the status on JoinUp                                                                                    | [39](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/39) |
| R2  |                                                                   | subclass relations of Event are added in the RDF schema                                                                    | Missing relations in the RDF schema                                                                                        | [40](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/40) |
| P5  |                                                                   | Definition of hasParticipation is updated                                                                                  | Definition has to be updated for consistency with the data model                                                           | [41](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/41) |
| C3  |                                                                   | Definition of Evidence is updated                                                                                          | Definition has to be updated for consistency with the data model                                                           | [46](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/46) |
| P6  | propery type in CriterionRequirement                              | propery type in class cv:Requirement                                                                                       | For interoperabilty with CCCEV 2.0                                                                                         | [47](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/47) |
| P7  |                                                                   | added Rule.type                                                                                                            | To better classify rules                                                                                                   | [48](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/48) |
| P8  |                                                                   | Optional properties of ContactPoint are displayed                                                                          | Missing properties in the UML class diagram                                                                                | [55](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/55) |
| P9  |                                                                   | added ContactPoint.contactPage                                                                                             | A contactPoint can have a link to a contactPage                                                                            | [57](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/57) |
| R3  |                                                                   | Relation between Rule and Requirement added                                                                                | Requirements are used to implement Rules defined in  legal specifications                                                  | [61](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/61) |
| C4  |                                                                   | added dcat:DataSet                                                                                                         | Alignement with DCAT-AP                                                                                                    | [62](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/62) |
|     |                                                                   | Version info added in the RDF schema                                                                                       | End users and information systems can retrieve the version from the RDF schema                                             | [64](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/64) |
|     |                                                                   | Provenance added to all concepts in RDF                                                                                    | For consistency, all concepts have their provenance                                                                        | [65](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/65) |
| P10 |                                                                   | The Europass controlled vocabulary is recommended in the usage notes of the Channel class.                                 |                                                                                                                            | [66](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/66) |
| P11 |                                                                   | The property 'description' is added to the Channel class                                                                   | Allow the user to define how to use a Channel                                                                              | [66](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/66) |
| P12 |                                                                   | Cardinality for dct:title and dct:description extended to 1..n                                                             | Support for multiple languages                                                                                             | [67](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/67) |
|     |                                                                   | SHACL shape is wrongly generated                                                                                           |                                                                                                                            | [68](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/68) |
| P13 |                                                                   | the range of cv:hasContactPoint changed to cv:ContactPoint                                                                 | Alignment with DCAT-AP                                                                                                     | [69](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/69) |
| P14 | schema.hoursAvailable                                             | cv.hoursAvailable                                                                                                          | Alignment with Core Vocabularies                                                                                           | [70](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/70) |
| P15 | range of isDefinedby and ownedBy: cv:PublicOrganization           | range of isDefinedby and ownedBy: org:Organisation                                                                         | Enlarging range for private organizations                                                                                  | [71](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/71) |
| P16 |                                                                   | Cost value URI changed to [http://data.europa.eu/m8g/hasvalue](http://data.europa.eu/m8g/hasvalue)                         | Alignment with Core Vocabularies                                                                                           | [72](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/72) |
| P17 | cv:hasAddress                                                     | locn:address                                                                                                               | Alignment with Core Vocabularies                                                                                           | [73](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/73) |
| P18 |                                                                   | added Channel.processingTime                                                                                               | The processing time of a Public Service may depend on the Channel chosen                                                   | [75](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/75) |
| P19 |                                                                   | added Output.language                                                                                                      | Public Service can have an Output in multiple languages                                                                    | [77](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/77) |
| R4  | hasCompetentAuthority 1..1                                        | hasCompetentAuthority 1..n                                                                                                 | A Public Service may have 1 or more competent authority                                                                    | [78](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/78) |
| C5  |                                                                   | added the class Concession Contract                                                                                        | Enables modelling the procurement of works or services by means of a concession                                            | 80                                                                   |
| P20 | PublicService.type                                                | PublicService.functionsOfGovernment                                                                                        | Reflect the underlying classification more accurately                                                                      | [81](https://github.com/catalogue-of-services-isa/CPSV-AP/issues/81) |
