releases/3.1.1/Changelog.md
## Introduction

### Changes from 3.1.0 to 3.1.1
| Nr  | CPSV-AP v3.1.0 2022                                            | CPSV-AP v3.1.1 2023                                 | Rationale                                                                          | GitHub/Change                                                        |
| --- | -------------------------------------------------------------- | --------------------------------------------------- | ---------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
| C1  | Channel                                       | Channel                           | Split definition from usage note | [#116](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/116) |
| C2  | Dataset                                       | Dataset                           | Split definition from usage note | [#116](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/116) |
| R1  | PublicService.hasInput                                       | PublicService.hasInput                          | Split definition from usage note | [#116](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/116) |
| R2  | ContactPoint.openingHours                                       | ContactPoint.openingHours                         | More generic definitions | [#117](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/117) |
| R3  | ContactPoint.specialOpeningHoursSpecifications                                        | ContactPoint.specialOpeningHoursSpecifications                          | More generic definitions | [#117](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/117) |
| R4  | Channel.specialOpeningHoursSpecifications                                        | Channel.specialOpeningHoursSpecifications                          | More generic definitions | [#117](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/117) |
| R5  | Channel.specialOpeningHoursSpecifications                                        | Channel.specialOpeningHoursSpecifications                          | More generic definitions | [#117](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/117) |
| R6  | Agent.participates                                        | Agent.participates                        | Relax cardinality | [#113](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/113) |

### Changes from 3.0.0 to 3.1.0

| Nr  | CPSV-AP v3.0.0 2022                                            | CPSV-AP v3.1.0 2022                                 | Rationale                                                                          | GitHub/Change                                                        |
| --- | -------------------------------------------------------------- | --------------------------------------------------- | ---------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
| D1  | Address.addressID:String                                       | Address.addressID:Literal                           | For backward compatibility with version 1.0 and general compatibility with INSPIRE | [#24](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/24) |
| D2  | Address.locatorDesignator:String                               | Address.locatorDesignator:Literal                   | For backward compatibility with version 1.0 and general compatibility with INSPIRE | [#24](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/24) |
| D3  | Address.poBox:String                                           | Address.poBox:Literal                               | For backward compatibility with version 1.0 and general compatibility with INSPIRE | [#24](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/24) |
| D4  | Address.postCode:String                                        | Address.postCode:Literal                            | For backward compatibility with version 1.0 and general compatibility with INSPIRE | [#24](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/24) |
| P1  | Address.adminUnitL1:Text                                       | Address.adminUnitL1:Text                            | Removed bracket in the label for better JSON-LD playground compatibility           | [#23](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/23) |
| P2  | Address.adminUnitL2:Text                                       | Address.adminUnitL2:Text                            | Removed bracket in the label for better JSON-LD playground compatibility           | [#23](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/23) |
| P3  | Address.postName:Text                                          | Address.postName:Text                               | Removed bracket in the label for better JSON-LD playground compatibility           | [#23](https://github.com/SEMICeu/Core-Location-Vocabulary/issues/23) |
| R1  | PublicService.hasContactPoint:ContactPoint                     | PublicService.contactPoint:ContactPoint             | URI and label changed in alignment with CPOV                                       |                                                                      |
| C1  | ContactPoint                                                   | ContactPoint                                        | Definition and usage notes changed in alignment with CPOV                          |                                                                      |
| P4  | ContactPoint.contactPage:Document                              | ContactPoint.contactPage:Document                   | Definition changed in aligment with CPOV                                           |                                                                      |
| P5  | ContactPoint.hasEmail:Literal                                  | ContactPoint.hasEmail:Literal                       | URI changed in alignment with CPOV                                                 | [#101](https://github.com/SEMICeu/CPSV-AP/issues/101)                |
| P6  | ContactPoint.hasTelephone:Literal                              | ContactPoint.hasTelephone:Literal                   | URI changed in alignment with CPOV                                                 | [#101](https://github.com/SEMICeu/CPSV-AP/issues/101)                |
| P7  | ContactPoint.openingHours:Text                                 | ContactPoint.openingHours:TemporalEntitty           | The property became a relation in alignment with CPOV                              | [#86](https://github.com/SEMICeu/CPSV-AP/issues/86)                  |
| R2  | ContactPoint.availabilityRestriction:OpeningHoursSpecification | ContactPoint.availabilityRestriction:TemporalEntity | The relation is changed to TemporalEntity in alignment with CPOV                   | [#86](https://github.com/SEMICeu/CPSV-AP/issues/86)                  |
| P8  | Channel.openingHours:Text                                      | Channel.openingHours:TemporalEntitty                | The property became a relation in alignment with CPOV                              | [#86](https://github.com/SEMICeu/CPSV-AP/issues/86)                  |
| R3  | Channel.availabilityRestriction:OpeningHoursSpecification      | Channel.availabilityRestriction:TemporalEntity      | The relation is changed to TemporalEntity in alignment with CPOV                   | [#86](https://github.com/SEMICeu/CPSV-AP/issues/86)                  |
| R4  | Channel.type:Code                                              | Channel.type:Code                                   | The usage note has been reviewed                                                   | [#66](https://github.com/SEMICeu/CPSV-AP/issues/66)                  |
| C2  | OpeningHoursSpecification                                      | TemporalEntity                                      | The class is changed in alignment with CPOV and CPEV                               | [#109](https://github.com/SEMICeu/CPSV-AP/issues/109)                |
| P9  | \-                                                             | TemporalEntity.description:Text                     | Added in alignment with CPEV                                                       | [#106](https://github.com/SEMICeu/CPSV-AP/issues/106)                |
| R4  | \-                                                             | TemporalEntity.frequency:Code                       | Added in alignment with CPEV                                                       |                                                                      |
| R4  | PublicServive.hasParticipation:Participation                   | PublicServive.hasParticipation:Participation        | The definition is changed in alignment with CPEV                                   |                                                                      |
| C3  | Participation                                                  | Participation                                       | The definition and usage note changed in alignment with CPEV                       |                                                                      |
| P10 | Participation.description:Text                                 | Participation.description:Text                      | The definition is changed in alignment with CPEV                                   |                                                                      |
| P11 | Participation.identifier:Literal                               | Participation.identifier:Literal                    | The definition is changed in alignment with CPEV                                   |                                                                      |
| R5  | Participation.role:Code                                        | Participation.role:Code                             | The definition is changed in alignment with CPEV                                   |                                                                      |
| R6  | \-                                                             | Participation.hasParticipant:Agent                  | Add inverse relation between Participation and Agent.                              | [#110](https://github.com/SEMICeu/CPSV-AP/issues/110)                |
| R7  | Agent.playsRole:Participation                                  | Agent.participates:Participation                    | Renamed relation and restricted cardinality                                        | [#110](https://github.com/SEMICeu/CPSV-AP/issues/110)                |
| R8  | Agent.address:Address                                          | Agent.address:Address                               | Cardinality is relaxed                                                             | [#107](https://github.com/SEMICeu/CPSV-AP/issues/107)                |
| C4  | Address                                                        | Address                                             | The namespace is changed                                                           | [#105](https://github.com/SEMICeu/CPSV-AP/issues/105)                |
| R9  | Dataset.landingPage:Document                                   | Dataset.landingPage:Document                        | The cardinality is renamed                                                         | [#104](https://github.com/SEMICeu/CPSV-AP/issues/104)                |
| R10 | Evidence.relatedDocumentation:Document                         | Evidence.relatedDocumentation:Document              | The cardinality is renamed                                                         | [#104](https://github.com/SEMICeu/CPSV-AP/issues/104)                |
| C5  | ConcessionContract                                             | ServiceConcessionContract                           | Class renamed for better clarity                                                   | [#100](https://github.com/SEMICeu/CPSV-AP/issues/100)                |
| C6  | Contract                                                       | ConcessionContract                                  | To be more specific and interoperable with eProcurement                            | [#100](https://github.com/SEMICeu/CPSV-AP/issues/100)                |
| P12 | PublicOrganisation.preferredLabel:Text                         | PublicOrganisation.preferredLabel:Text              | Cardinality is relaxed                                                             | [#99](https://github.com/SEMICeu/CPSV-AP/issues/99)                  |
| R11 | \-                                                             | PublicService.addressee:Code                        | To indicate addressee of a public service                                          | [#96](https://github.com/SEMICeu/CPSV-AP/issues/96)                  |
| R12 | \-                                                             | PublicService.hasInputType:EvidenceType             | To support public service descriptions case                                        | [#95](https://github.com/SEMICeu/CPSV-AP/issues/95)                  |
| C7  | \-                                                             | EvidenceType                                        | To support public service descriptions case                                        | [#95](https://github.com/SEMICeu/CPSV-AP/issues/95)                  |
| P13 | \-                                                             | EvidenceType.identifier:Literal                     | To align with CCCEV and make it mandatory like other classes in CPSV-AP            |                                                                      |
| R13 |                                                                | EvidenceType.evidenceTypeClassfication:Code         | To align with CCCEV                                                                |                                                                      |
| R14 | Event.relatedService:PublicService                             | Event.hasRelatedService:PublicService               | Relation renamed and added usage note                                              | [#63](https://github.com/SEMICeu/CPSV-AP/issues/63)                  |
| R15 | PublicService.related:PublicService                            | PublicService.relatedService:PublicService          | Relation renamed and added usage note                                              | [#63](https://github.com/SEMICeu/CPSV-AP/issues/63)                  |

### Changes from 2.2.1 to 3.0.0
This document describes the (major) changes to [the version 2.2.1](https://github.com/SEMICeu/CPSV-AP/tree/master/releases/2.2.1) of CPSV-AP for which a new version is being proposed ([version 3.0.0](https://catalogue-of-services-isa.github.io/CPSV-AP/releases/3.0.0/index_en.html)). The list of changes results in the new version to be considered as a major release.


| Nr  | CPSV-AP 2.2.1                                                     | CPSV-AP 3.0                                                                                                                | Rationale                                                                                                                  | Github issue                                                         |
| --- | ----------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
| P1  |                                                                   | Recommendation of controlled vocabularies in the usage notes of the Public Service class (sector, functions of government) |                                                                                                                            | [5](https://github.com/SEMICeu/CPSV-AP/issues/5)   |
| P2  |                                                                   | Recommendation of controlled vocabularies in the usage notes of the Public Service class (spatial)                         |                                                                                                                            | [11](https://github.com/SEMICeu/CPSV-AP/issues/11) |
| P3  | Lack of consistency in the order of optional/mandatory properties | Mandatory properties have been moved before optionals                                                                      | For end user it is more easy to read/search properties in alphabetical order                                               | [33](https://github.com/SEMICeu/CPSV-AP/issues/33) |
| R1  | \                                                                 | dct:hasPart added as a relation between Public Service and Dataset                                                         | The direct link from Dataset to Public Service is needed when the starting point of the serialization is a Dataset         | [35](https://github.com/SEMICeu/CPSV-AP/issues/35) |
| C1  | dct:agent                                                         | foaf:agent                                                                                                                 | For interoperability with Core Vocabularies                                                                                | [36](https://github.com/SEMICeu/CPSV-AP/issues/36) |
| C2  | class CriterionRequirement                                        | class cv:Requirement                                                                                                       | For interoperabilty with CCCEV 2.0                                                                                         | [37](https://github.com/SEMICeu/CPSV-AP/issues/37) |
|     | \                                                                 | License added                                                                                                              | Explicit license reuse in the RDF Schema allow end users and information systems to better interpret the rights on CPSV-AP | [38](https://github.com/SEMICeu/CPSV-AP/issues/38) |
| P4  | dct:status                                                        | adms:status                                                                                                                | Inconsistency with the status on JoinUp                                                                                    | [39](https://github.com/SEMICeu/CPSV-AP/issues/39) |
| R2  |                                                                   | subclass relations of Event are added in the RDF schema                                                                    | Missing relations in the RDF schema                                                                                        | [40](https://github.com/SEMICeu/CPSV-AP/issues/40) |
| P5  |                                                                   | Definition of hasParticipation is updated                                                                                  | Definition has to be updated for consistency with the data model                                                           | [41](https://github.com/SEMICeu/CPSV-AP/issues/41) |
| C3  |                                                                   | Definition of Evidence is updated                                                                                          | Definition has to be updated for consistency with the data model                                                           | [46](https://github.com/SEMICeu/CPSV-AP/issues/46) |
| P6  | propery type in CriterionRequirement                              | propery type in class cv:Requirement                                                                                       | For interoperabilty with CCCEV 2.0                                                                                         | [47](https://github.com/SEMICeu/CPSV-AP/issues/47) |
| P7  |                                                                   | added Rule.type                                                                                                            | To better classify rules                                                                                                   | [48](https://github.com/SEMICeu/CPSV-AP/issues/48) |
| P8  |                                                                   | Optional properties of ContactPoint are displayed                                                                          | Missing properties in the UML class diagram                                                                                | [55](https://github.com/SEMICeu/CPSV-AP/issues/55) |
| P9  |                                                                   | added ContactPoint.contactPage                                                                                             | A contactPoint can have a link to a contactPage                                                                            | [57](https://github.com/SEMICeu/CPSV-AP/issues/57) |
| R3  |                                                                   | Relation between Rule and Requirement added                                                                                | Requirements are used to implement Rules defined in  legal specifications                                                  | [61](https://github.com/SEMICeu/CPSV-AP/issues/61) |
| C4  |                                                                   | added dcat:DataSet                                                                                                         | Alignement with DCAT-AP                                                                                                    | [62](https://github.com/SEMICeu/CPSV-AP/issues/62) |
|     |                                                                   | Version info added in the RDF schema                                                                                       | End users and information systems can retrieve the version from the RDF schema                                             | [64](https://github.com/SEMICeu/CPSV-AP/issues/64) |
|     |                                                                   | Provenance added to all concepts in RDF                                                                                    | For consistency, all concepts have their provenance                                                                        | [65](https://github.com/SEMICeu/CPSV-AP/issues/65) |
| P10 |                                                                   | The Europass controlled vocabulary is recommended in the usage notes of the Channel class.                                 |                                                                                                                            | [66](https://github.com/SEMICeu/CPSV-AP/issues/66) |
| P11 |                                                                   | The property 'description' is added to the Channel class                                                                   | Allow the user to define how to use a Channel                                                                              | [66](https://github.com/SEMICeu/CPSV-AP/issues/66) |
| P12 |                                                                   | Cardinality for dct:title and dct:description extended to 1..n                                                             | Support for multiple languages                                                                                             | [67](https://github.com/SEMICeu/CPSV-AP/issues/67) |
|     |                                                                   | SHACL shape is wrongly generated                                                                                           |                                                                                                                            | [68](https://github.com/SEMICeu/CPSV-AP/issues/68) |
| P13 |                                                                   | the range of cv:hasContactPoint changed to cv:ContactPoint                                                                 | Alignment with DCAT-AP                                                                                                     | [69](https://github.com/SEMICeu/CPSV-AP/issues/69) |
| P14 | schema.hoursAvailable                                             | cv.hoursAvailable                                                                                                          | Alignment with Core Vocabularies                                                                                           | [70](https://github.com/SEMICeu/CPSV-AP/issues/70) |
| P15 | range of isDefinedby and ownedBy: cv:PublicOrganization           | range of isDefinedby and ownedBy: org:Organisation                                                                         | Enlarging range for private organizations                                                                                  | [71](https://github.com/SEMICeu/CPSV-AP/issues/71) |
| P16 |                                                                   | Cost value URI changed to [http://data.europa.eu/m8g/hasvalue](http://data.europa.eu/m8g/hasvalue)                         | Alignment with Core Vocabularies                                                                                           | [72](https://github.com/SEMICeu/CPSV-AP/issues/72) |
| P17 | cv:hasAddress                                                     | locn:address                                                                                                               | Alignment with Core Vocabularies                                                                                           | [73](https://github.com/SEMICeu/CPSV-AP/issues/73) |
| P18 |                                                                   | added Channel.processingTime                                                                                               | The processing time of a Public Service may depend on the Channel chosen                                                   | [75](https://github.com/SEMICeu/CPSV-AP/issues/75) |
| P19 |                                                                   | added Output.language                                                                                                      | Public Service can have an Output in multiple languages                                                                    | [77](https://github.com/SEMICeu/CPSV-AP/issues/77) |
| R4  | hasCompetentAuthority 1..1                                        | hasCompetentAuthority 1..n                                                                                                 | A Public Service may have 1 or more competent authority                                                                    | [78](https://github.com/SEMICeu/CPSV-AP/issues/78) |
| C5  |                                                                   | added the class Concession Contract                                                                                        | Enables modelling the procurement of works or services by means of a concession                                            | [80](https://github.com/SEMICeu/CPSV-AP/issues/80) |
| P20 | PublicService.type                                                | PublicService.functionsOfGovernment                                                                                        | Reflect the underlying classification more accurately                                                                      | [81](https://github.com/SEMICeu/CPSV-AP/issues/81) |

